--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /[[]document]/
 /example/solr/collection1/data/index/*
 /example/solr/collection1/data/tlog/*
+example/logs/solr.log
+example/velocity.log
