--- a/Notepad++Portable/Data/settings/Notepad++PortableSettings.ini
+++ b/Notepad++Portable/Data/settings/Notepad++PortableSettings.ini
@@ -1,6 +1,6 @@
 [Notepad++PortableSettings]
 LastDrive=D:
-LastDirectory=\Desktop\Dropbox\[mindmaps]\[reading]\[103-2 Java資料結構與應用]\Notepad++Portable
+LastDirectory=\xampp\htdocs\ir-practice-solr\Notepad++Portable
 Language=English
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=D:\Desktop\Dropbox\[mindmaps]\[reading]
+PAL:LastPortableAppsBaseDir=D:\xampp\htdocs
